--- a/_includes/amp-head.html
+++ b/_includes/amp-head.html
@@ -62,8 +62,8 @@
     h3,
     .h3 {
         position: relative;
+        font-family: 'Merriweather', serif;
     }
-
     h2::before,
     .h2::before {
       width: 25px;
@@ -298,10 +298,8 @@
     }
 
 
-
     a {
-
-      color:#117301;
+      color: #117301;
     }
 
     a:hover {
