--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -115,13 +115,13 @@
           <footer class="article-footer">
             <section class="publication-author">
               <div class="profile-photo">
-                <img class="img" src="/assets/img/authors/dorota_czerwinska.png" alt="Dorota Czerwińska - Treehouse">
+                <img class="img" src="/assets/img/authors/alicja_nowak.png" alt="Alicja Nowak - Treehouse">
               </div>
               <div class="profile-details">
-                <span class="name">Dorota Czerwińska</span>
+                <span class="name">Alicja Nowak</span>
                 <span class="position">{{site.i18n[page.lang].autor_label}}</span>
                 <p>{{site.i18n[page.lang].author_description}}</p>
-                <a href="mailto:dorota@treehouse.co" class="more">{{site.i18n[page.lang].contact_label}}: dorota@treehouse.co</a>
+                <a href="mailto:dorota@treehouse.co" class="more">{{site.i18n[page.lang].contact_label}}: alicja@homezoo.co</a>
               </div>
             </section>
 
