--- a/_layouts/ranking.html
+++ b/_layouts/ranking.html
@@ -153,17 +153,17 @@
               <div class="beam">
                   <div class="beam-item">
                       <footer class="review-footer">
-                          <section class="publication-author">
-                              <div class="profile-photo">
-                                <img class="img" src="/assets/img/authors/dorota_czerwinska.png" alt="">
-                              </div>
-                              <div class="profile-details">
-                                  <span class="name">Dorota Czerwińska</span>
-                                  <span class="position">{{site.i18n[page.lang].autor_label}}</span>
-                                  <p>{{site.i18n[page.lang].author_description}}</p>
-                                  <a href="mailto:dorota@treehouse.co" class="more">{{site.i18n[page.lang].contact_label}}: dorota@treehouse.co</a>
-                              </div>
-                          </section>
+                        <section class="publication-author">
+                            <div class="profile-photo">
+                              <img class="img" src="/assets/img/authors/alicja_nowak.png" alt="Alicja Nowak - Treehouse">
+                            </div>
+                            <div class="profile-details">
+                              <span class="name">Alicja Nowak</span>
+                              <span class="position">{{site.i18n[page.lang].autor_label}}</span>
+                              <p>{{site.i18n[page.lang].author_description}}</p>
+                              <a href="mailto:dorota@treehouse.co" class="more">{{site.i18n[page.lang].contact_label}}: alicja@homezoo.co</a>
+                            </div>
+                        </section>
                       </footer>
                   </div>
               </div>
