--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
   <meta name="msapplication-TileColor" content="#117301">
   <meta name="msapplication-config" content="/assets/img/icons/browserconfig.xml">
   <meta name="theme-color" content="#117301">
+  <meta name="robots" content="index, follow" />
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <link rel="manifest" href="/manifest.json">
