--- a/_layouts/ranking-hub.html
+++ b/_layouts/ranking-hub.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- goadtag -->
 
   {% include header.html %}
 
@@ -105,27 +105,11 @@
             <div class="beam b-size-5  review-section">
             <div class="beam-item b-size-3 review-text">
 
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-format="fluid"
-                data-ad-layout-key="-dx+59+ez-g3-g4"
-                data-ad-client="ca-pub-2667869260064660"
-                data-ad-slot="7616548873"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            <!-- goad -->
 
                 {{ content | markdownify | inject_anchors }}
 
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-format="fluid"
-                data-ad-layout-key="-dx+59+ez-g3-g4"
-                data-ad-client="ca-pub-2667869260064660"
-                data-ad-slot="7616548873"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            <!-- goad -->
 
             </div>
 
