--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,14 +50,12 @@
   <!-- End Facebook Pixel Code -->
   {% endif %}
 
-  <!-- Google AdSense -->
-  <script data-ad-client="ca-pub-2667869260064660" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <!-- End - Google AdSense -->
+  <!-- goadclient -->
 
   {% if site.scvarificationnumber %}
     <!-- Google Search Console -->
       <meta name="google-site-verification" content="{{site.scvarificationnumber}}" />
-    <!-- End Google Search Console -->    
+    <!-- End Google Search Console -->
   {% endif %}
 
   {% if site.analyticsvarificationnumber %}
@@ -79,7 +77,7 @@
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','{{site.gtagmanagervarificationnumber}}');</script> 
+        })(window,document,'script','dataLayer','{{site.gtagmanagervarificationnumber}}');</script>
     <!-- End Google Tag Manager -->
   {% endif %}
 
