--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
 <footer class="beams-wrapper global-beam-wrapper page-footer">
   <div class="beam">
     <div class="beam-item page-footer-content">
-      <p class="copy">© 2020 - 2021 AnimalsHome. All rights reserved.</p>
+      <p class="copy">© 2020 - 2021 AnimalsBook. All rights reserved.</p>
       <nav>
         <ul>
           <li>
