--- a/_includes/parts/product-listing-boxitem-md.html
+++ b/_includes/parts/product-listing-boxitem-md.html
@@ -1,7 +1,8 @@
 {% assign product_type = include.product.properties.type %}
 {% assign product_size = include.product.properties.product_size%}
 {% assign product_color = include.product.properties.color %}
-{% assign product_properties = product_type | append: " " | append: product_size | append: " " | append: product_color %}
+{% assign product_destiny = include.product.properties.destiny %}
+{% assign product_properties = properties.destiny | append: " " | append: product_type | append: " " | append: product_size | append: " " | append: product_color %}
 {% assign product_properties_array = product_properties | remove: "," | split: " " %}
 
 {% assign product_name = include.product.name %}
