add related products below intro

--- a/assets/css/pages/article.scss
+++ b/assets/css/pages/article.scss
@@ -78,3 +78,4 @@
 
 @import "components/articles-listing-boxitem-sm.scss";
 @import "components/product-listing-boxitem-md.scss";
+@import "components/product-listing-boxitem-sm.scss";
