--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,141 @@
+<!-- Related products - Filter -->
+
+{%assign products_with_lang = site.products | where: "lang" , page.lang %}
+{% assign products_collection = products_with_lang%}
+
+{% if page.use_related_products %}
+
+      <!-- MANUALLY ASSIGNED PRODUCTS -->
+    {% assign i = 0 %}
+    {% assign related_products = page.related_products%}
+    {% for item in  related_products %}
+        {% assign products = products_collection | where: "path", page.related_products[i]  %}
+        {% for product in  products %}
+            {% assign path_handle = product.path  | split: ',' %}
+            {% assign products_path_array = products_path_array | concat: path_handle %}
+        {% endfor %}
+        {% assign i = i | plus: 1 %}
+    {% endfor %}
+    <!-- creating array of products with matching category -->
+    {% assign products_collection = '' | split: ',' %}
+    {% for item in products_path_array %}
+        {% assign found_product = site.products | where: "path" , item %}
+        {% assign products_collection = products_collection  | concat: found_product %}
+    {% endfor %}
+
+{% else %}
+
+    {% if  page.products_category.size > 0  %}
+
+        {% assign products_path_array = '' | split: ',' %}
+        {% for post_category in page.products_category  %}
+            {% for product in products_collection %}
+                {% for product_category in product.category  %}
+                    {% if product_category == post_category %}
+                        {% assign path_handle = product.path  | split: ',' %}
+                        {% assign products_path_array = products_path_array | concat: path_handle %}
+                    {% endif %}
+                {% endfor%}
+            {% endfor %}
+        {% endfor %}
+        {% assign products_path_array = products_path_array | uniq %}
+        <!-- creating array of products with matching category -->
+        {% assign products_collection = '' | split: ',' %}
+        {% for item in products_path_array %}
+            {% assign found_product = site.products | where: "path" , item %}
+            {% assign products_collection = products_collection  | concat: found_product %}
+        {% endfor %}
+        <!-- Po przefiltrowaniu kategorii:  {{products_collection.size}}<br> -->
+
+    {% endif %}
+    {% if  page.products_tags.size > 0  %}
+
+        {% assign products_path_array = '' | split: ',' %}
+        {% for post_tag in page.products_tags  %}
+            {% for product in products_collection %}
+                {% for product_tag in product.tags %}
+                    {% if product_tag == post_tag %}
+                        {% assign path_handle = product.path  | split: ',' %}
+                        {% assign products_path_array = products_path_array | concat: path_handle %}
+                    {% endif %}
+                {% endfor%}
+            {% endfor %}
+        {% endfor %}
+        {% assign products_path_array = products_path_array | uniq %}
+        <!-- creating array of products with matching tags -->
+        {% assign products_collection = '' | split: ',' %}
+        {% for item in products_path_array %}
+            {% assign found_product = site.products | where: "path" , item %}
+            {% assign products_collection = products_collection  | concat: found_product %}
+        {% endfor %}
+        <!-- Po przefiltrowaniu tagów:  {{products_collection.size}}<br> -->
+
+    {% endif %}
+    {% if  page.property.size > 0 and page.property_value.size  > 0  %}
+        {% assign products_path_array = '' | split: ',' %}
+        {% assign property_name =  page.property | remove: "properties."%}
+        {% for item in page.property_value  %}
+            {%assign post_value = item | downcase %}
+            {% for product in products_collection %}
+                {% for property in product.properties %}
+                        {% if property[0] ==  property_name %}
+                            {%assign matching_property_values = property[1] | downcase | split: ", " %}
+                            {% for value  in matching_property_values %}
+                                {% if value == post_value %}
+                                    {% assign path_handle = product.path  | split: ',' %}
+                                    {% assign products_path_array = products_path_array | concat: path_handle %}
+                                {%endif%}
+                            {% endfor %}
+                        {%endif%}
+                {% endfor %}
+            {% endfor %}
+        {%endfor%}
+        {% assign products_path_array = products_path_array | uniq %}
+        <!-- creating array of products with matching property -->
+        {% assign products_collection = '' | split: ',' %}
+        {% for item in products_path_array %}
+            {% assign found_product = site.products | where: "path" , item %}
+            {% assign products_collection = products_collection  | concat: found_product %}
+        {% endfor %}
+        <!-- Po przefiltrowaniu właściwości:  {{products_collection.size}}<br> -->
+
+    {%endif%}
+
+{%endif%}
+
+<!-- End - Related products  - Filter -->
+
+<!-- Related products - display -->
+
+{% if page.use_related_products %}
+    {% assign products_quantity = related_products.size %}
+{% elsif page.products_quantity %}
+    {% assign products_quantity = page.products_quantity %}
+{% else %}
+    {% assign products_quantity = 5 %}
+{%endif%}
+
+{% assign products_collection_quantity =  products_collection.size %}
+
+{% if products_collection_quantity < products_quantity %}
+
+    {% assign rest_products_quantity =  products_quantity | minus: products_collection_quantity %}
+    {% assign mixed_products_quantity = products_with_lang.size %}
+    {% assign mixed_products = products_with_lang | sample: mixed_products_quantity  %}
+
+    {%  for i in (1..rest_products_quantity) %}
+        {% assign additional_product_path = mixed_products[i].path  %}
+        {% assign found_product = site.products | where: "path" , additional_product_path %}
+        {% assign products_collection = products_collection  | concat: found_product %}
+    {%endfor%}
+
+{% endif %}
+
+{% assign mixed_products_collection = products_collection | sample: products_quantity%}
+
+<!-- End - Related products - display -->
+
+
 <!DOCTYPE html>
 <html lang="{{ page.full-lang | default: site.lang | default: 'en' }}">
 <head>
@@ -65,22 +203,13 @@
           <!-- goad -->
 
           <div class="flex-wrapper  nowrap">
-              <div class="flex-container">
-
-
-               {% for item in  related_products %}
-                {% assign i = 0 %}
-                {% assign related_products = page.related_products%}
-                 {% assign products = site.products | where: "path", page.related_products[i]  %}
-                 {% for item in  products %}
-                 <div class="flex-item" >
-                  {% include parts/product-listing-boxitem-md.html product=item %}
+            <div class="flex-container">
+              {% for item in mixed_products_collection %}
+                <div class="flex-item" >
+                  {% include parts/product-listing-boxitem-sm.html product=item %}
                 </div>
-                 {% endfor %}
-                 {% assign i = i | plus: 1 %}
-               {% endfor %}
-
-              </div>
+              {%endfor%}
+            </div>
           </div>
 
           {{ content | inject_anchors | inject_ads }}
@@ -166,141 +295,6 @@
                 </div>
             </div>
 
-
-            <!-- Related products - Filter -->
-
-            {%assign products_with_lang = site.products | where: "lang" , page.lang %}
-            {% assign products_collection = products_with_lang%}
-
-            {% if page.use_related_products %}
-
-                 <!-- MANUALLY ASSIGNED PRODUCTS -->
-                {% assign i = 0 %}
-                {% assign related_products = page.related_products%}
-                {% for item in  related_products %}
-                    {% assign products = products_collection | where: "path", page.related_products[i]  %}
-                    {% for product in  products %}
-                        {% assign path_handle = product.path  | split: ',' %}
-                        {% assign products_path_array = products_path_array | concat: path_handle %}
-                    {% endfor %}
-                    {% assign i = i | plus: 1 %}
-                {% endfor %}
-                <!-- creating array of products with matching category -->
-                {% assign products_collection = '' | split: ',' %}
-                {% for item in products_path_array %}
-                    {% assign found_product = site.products | where: "path" , item %}
-                    {% assign products_collection = products_collection  | concat: found_product %}
-                {% endfor %}
-
-            {% else %}
-
-                {% if  page.products_category.size > 0  %}
-
-                    {% assign products_path_array = '' | split: ',' %}
-                    {% for post_category in page.products_category  %}
-                        {% for product in products_collection %}
-                            {% for product_category in product.category  %}
-                                {% if product_category == post_category %}
-                                    {% assign path_handle = product.path  | split: ',' %}
-                                    {% assign products_path_array = products_path_array | concat: path_handle %}
-                                {% endif %}
-                            {% endfor%}
-                        {% endfor %}
-                    {% endfor %}
-                    {% assign products_path_array = products_path_array | uniq %}
-                    <!-- creating array of products with matching category -->
-                    {% assign products_collection = '' | split: ',' %}
-                    {% for item in products_path_array %}
-                        {% assign found_product = site.products | where: "path" , item %}
-                        {% assign products_collection = products_collection  | concat: found_product %}
-                    {% endfor %}
-                    <!-- Po przefiltrowaniu kategorii:  {{products_collection.size}}<br> -->
-
-                {% endif %}
-                {% if  page.products_tags.size > 0  %}
-
-                    {% assign products_path_array = '' | split: ',' %}
-                    {% for post_tag in page.products_tags  %}
-                        {% for product in products_collection %}
-                            {% for product_tag in product.tags %}
-                                {% if product_tag == post_tag %}
-                                    {% assign path_handle = product.path  | split: ',' %}
-                                    {% assign products_path_array = products_path_array | concat: path_handle %}
-                                {% endif %}
-                            {% endfor%}
-                        {% endfor %}
-                    {% endfor %}
-                    {% assign products_path_array = products_path_array | uniq %}
-                    <!-- creating array of products with matching tags -->
-                    {% assign products_collection = '' | split: ',' %}
-                    {% for item in products_path_array %}
-                        {% assign found_product = site.products | where: "path" , item %}
-                        {% assign products_collection = products_collection  | concat: found_product %}
-                    {% endfor %}
-                    <!-- Po przefiltrowaniu tagów:  {{products_collection.size}}<br> -->
-
-                {% endif %}
-                {% if  page.property.size > 0 and page.property_value.size  > 0  %}
-                    {% assign products_path_array = '' | split: ',' %}
-                    {% assign property_name =  page.property | remove: "properties."%}
-                    {% for item in page.property_value  %}
-                        {%assign post_value = item | downcase %}
-                        {% for product in products_collection %}
-                            {% for property in product.properties %}
-                                    {% if property[0] ==  property_name %}
-                                        {%assign matching_property_values = property[1] | downcase | split: ", " %}
-                                        {% for value  in matching_property_values %}
-                                            {% if value == post_value %}
-                                                {% assign path_handle = product.path  | split: ',' %}
-                                                {% assign products_path_array = products_path_array | concat: path_handle %}
-                                            {%endif%}
-                                        {% endfor %}
-                                    {%endif%}
-                            {% endfor %}
-                        {% endfor %}
-                    {%endfor%}
-                    {% assign products_path_array = products_path_array | uniq %}
-                    <!-- creating array of products with matching property -->
-                    {% assign products_collection = '' | split: ',' %}
-                    {% for item in products_path_array %}
-                        {% assign found_product = site.products | where: "path" , item %}
-                        {% assign products_collection = products_collection  | concat: found_product %}
-                    {% endfor %}
-                    <!-- Po przefiltrowaniu właściwości:  {{products_collection.size}}<br> -->
-
-                {%endif%}
-
-            {%endif%}
-
-            <!-- End - Related products  - Filter -->
-
-            <!-- Related products - display -->
-
-            {% if page.use_related_products %}
-                {% assign products_quantity = related_products.size %}
-            {% elsif page.products_quantity %}
-                {% assign products_quantity = page.products_quantity %}
-            {% else %}
-                {% assign products_quantity = 5 %}
-            {%endif%}
-
-            {% assign products_collection_quantity =  products_collection.size %}
-
-            {% if products_collection_quantity < products_quantity %}
-
-                {% assign rest_products_quantity =  products_quantity | minus: products_collection_quantity %}
-                {% assign mixed_products_quantity = products_with_lang.size %}
-                {% assign mixed_products = products_with_lang | sample: mixed_products_quantity  %}
-
-                {%  for i in (1..rest_products_quantity) %}
-                    {% assign additional_product_path = mixed_products[i].path  %}
-                    {% assign found_product = site.products | where: "path" , additional_product_path %}
-                    {% assign products_collection = products_collection  | concat: found_product %}
-                {%endfor%}
-
-            {% endif %}
-
-            {% assign mixed_products_collection = products_collection | sample: products_quantity%}
             {% for item in mixed_products_collection %}
                 <aside class="beam-rail-item  r-height-auto">
                     <div class="sticky-element">
@@ -308,9 +302,6 @@
                     </div>
                 </aside>
             {%endfor%}
-
-            <!-- End - Related products - display -->
-
 
         </div>
       </article>
