--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,7 +50,9 @@
   <!-- End Facebook Pixel Code -->
   {% endif %}
 
-  <!-- goadclient -->
+  <!-- Google AdSense -->
+  <script data-ad-client="ca-pub-2667869260064660" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- End - Google AdSense -->
 
   {% if site.scvarificationnumber %}
     <!-- Google Search Console -->
