--- a/_includes/parts/product-listing-boxitem-md.html
+++ b/_includes/parts/product-listing-boxitem-md.html
@@ -42,9 +42,9 @@
 
 
 {%if include.product.links[0].url or include.product.links.url }}%}
-<a href="{{ include.product.url }}" target="_blank" class="product-link-wrapper" rel="nofollow noopener"  onClick="reply_click(this.getAttribute('data-link'))" data-link="{{include.product.links[0]['next-url'] }}{{include.product.links['next-url'] }}" data-product_name="{{include.product.name}}" data-product_category="{{include.product.category}}" data-product_type="{{include.product.properties.type}}" >
+<a href="{{ include.product.url }}" target="_blank" class="product-link-wrapper item-product-{{include.productnumber}}" rel="nofollow noopener"  onClick="reply_click(this.getAttribute('data-link'))" data-link="{{include.product.links[0]['next-url'] }}{{include.product.links['next-url'] }}" data-product_name="{{include.product.name}}" data-product_category="{{include.product.category}}" data-product_type="{{include.product.properties.type}}" >
 {%else%}
-<div class="product-link-wrapper">
+<div class="product-link-wrapper item-product-{{include.productnumber}}">
 {%endif%}
 
     {% if include.product.distinction == 'our_choice'%}
@@ -90,8 +90,8 @@
             <p class="content item-product-{{include.productnumber}}-desc">{{ include.product.description | truncate: 120 }}</p>
             {% endif %}
             {% if include.product.links.size > 0 %}
-                <footer class="footer item-product-{{include.productnumber}}-cta">
-                    <span class="btn btn-sm btn-cta">{{ include.product.links[0]['anchor'] }} {{ include.product.links['anchor'] }}</span>
+                <footer class="footer">
+                    <span class="btn btn-sm btn-cta item-product-{{include.productnumber}}-cta">{{ include.product.links[0]['anchor'] }} {{ include.product.links['anchor'] }}</span>
                     <!-- <span class="info info-success">Oszczędzasz 15%</span> -->
                 </footer>
             {% endif %}
