--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -234,7 +234,7 @@
                 <span class="name">Alicja Nowak</span>
                 <span class="position">{{site.i18n[page.lang].autor_label}}</span>
                 <p>{{site.i18n[page.lang].author_description}}</p>
-                <a href="mailto:dorota@treehouse.co" class="more">{{site.i18n[page.lang].contact_label}}: alicja@homezoo.co</a>
+                <a href="mailto:alicja@animalsbook.co" class="more">{{site.i18n[page.lang].contact_label}}: alicja@animalsbook.co</a>
               </div>
             </section>
 
